k3s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: sitruk
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 3000
